--- a/index.html
+++ b/index.html
@@ -1,3 +1,75 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>こよきちのポートフォリオサイト</title>
+    <meta name="description" content="こよきちのポートフォリオサイト">
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="./public/style.css">
+</head>
+<body>
+    <header class = "wrapper">
+        <img class = "photo" src="./assets/images/dog.png" alt="写真アイコン">
+        <h1>こよきち</h1>
+        <p>ウェブデザイナー独学中</p>
+    </header>
+
+    <main>
+        <section class = "myskills">
+            <div class = "wrapper">
+                <h2>MY SKILLS</h2>
+                <ul>
+                    <li class = "skill_html5">HTML5</li>
+                    <li class = "skill_css3">CSS3</li>
+                    <!--<li class = "skill_javascript">JavaScript</li> -->
+                </ul>
+            </div>
+        </section>
+
+        <section class = "wrapper">
+            <h2>WORKS</h2>
+            <ol>
+                <li>
+                    <div class = "works_box">
+                        <h3><a href="./public/movie-ranking.html">映画サイト</a></h3>
+                        <p>自分がこれまでにみた映画の種類・評価・簡単なあらすじ・感想・ジャンルを一覧にしたWebサイト</p>
+                        <br/>
+                        <img class = "works_image" src="./assets/images/movie_ranking.png" alt="映画のサイト">
+                    </div>
+                </li>
+                <hr/>
+                <li>
+                    <div class = "works_box">
+                        <h3><a href="./public/birthday-invite.html">誕生会の招待状ページ</a></h3>
+                        <p>誕生日をお祝いする際のホームページを作成。友達や家族に開いてもらうことで、サプライズ的な感じになる。</p>
+                        <br/>
+                        <img class = "works_image" src="./assets/images/Birthday.png" alt="誕生会">
+                    </div>
+                </li>
+            </ol>
+            <hr/>
+            
+        </section>
+    </main>
+
+    <footer>
+        <div class = "wrapper">
+            <p><small>&copy; 2021 proglus.jp</small></p>
+        </div>
+    </footer>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
 <!-- TODO 1: Create the HTML Boilerplate -->
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
