--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,20 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>今まで見てきた映画リストランキング</h1>
+    <h2>トップ3の紹介</h2>
+    <hr/>
+
+    <h3>千と千尋の神隠し</h3>
+    <p>日本を代表するアニメ。</p>
+    <h3>ワイルド・スピードシリーズ</h3>
+    <p>シリーズを重ねるごとにど派手になるアクションが必見</p>
+    <h3>ミッションインポッシブル</h3>
+    <p>ドキドキハラハラな映画。意外に騙されること間違いなし</p>
+</body>
+</html>
