add Cotact ME About me

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 </li>
             </ol>
             <hr/>
+
+            <a href="./public/about.html"> About Me</a>
+            <a href="./public/contact.html">Contact Me</a>
             
         </section>
     </main>
